--- a/BITLAB-war/web/curso.xhtml
+++ b/BITLAB-war/web/curso.xhtml
@@ -16,7 +16,7 @@
                 <li class="nav-item">
                     <a href="curso.bitlab" class="nav-link active">
                         <i class="fas fa-laptop-code nav-icon"></i>
-                        <p>Gestion de cursos</p>
+                        <p>Gestión de cursos</p>
                     </a>
                 </li>
             </ui:define>
@@ -77,7 +77,7 @@
                                         <h:outputText value="#{entidad.curId}"/>
                                     </p:column>
 
-                                    <p:column headerText="Codigo curso" filterBy="#{entidad.curCodigo}" filterMatchMode="contains" sortBy="#{entidad.curCodigo}">
+                                    <p:column headerText="Código curso" filterBy="#{entidad.curCodigo}" filterMatchMode="contains" sortBy="#{entidad.curCodigo}">
                                         <h:outputText value="#{entidad.curCodigo}"/>
                                     </p:column>
 
@@ -152,7 +152,7 @@
                                         <p:commandButton value="Eliminar" action="#{cursoManaged.eliminarEntidad()}" onsuccess="PF('editCurso').hide()" 
                                                          update="message :tablaCurso :messages :messagesAll" style = "background: #D90202; border-color: #D90202;"
                                                          icon="pi pi-trash">
-                                            <p:confirm header="Confirmación" message="Seguro que desea eliminar ?" icon="pi pi-exclamation-triangle" />
+                                            <p:confirm header="Confirmación" message="Seguro que desea eliminar?" icon="pi pi-exclamation-triangle" />
                                         </p:commandButton>
 
                                         <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
