--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -189,7 +189,7 @@
                                         <a href="#" class="nav-link">
                                             <i class="nav-icon fas fa-clipboard-list"></i>
                                             <p>
-                                                Gestion De Aplicantes
+                                                Gestión De aplicantes
                                                 <i class="right fas fa-angle-left"></i>
                                             </p>
                                         </a>
@@ -227,7 +227,7 @@
                                         <li class="nav-item">
                                             <a href="docente.bitlab" class="nav-link">
                                                 <i class="fas fa-chalkboard-teacher nav-icon"></i>
-                                                <p>Gestion de docentes</p>
+                                                <p>Gestión de docentes</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -235,7 +235,7 @@
                                         <li class="nav-item">
                                             <a href="alumnos.bitlab" class="nav-link">
                                                 <i class="fas fa-user-graduate nav-icon"></i>
-                                                <p>Gestion de alumnos</p>
+                                                <p>Gestión de alumnos</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -245,7 +245,7 @@
                                         <li class="nav-item">
                                             <a href="usuario.bitlab" class="nav-link">
                                                 <i class="fas fa-users nav-icon"></i>
-                                                <p>Gestion de usuarios</p>
+                                                <p>Gestión de usuarios</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -253,7 +253,7 @@
                                         <li class="nav-item">
                                             <a href="curso.bitlab" class="nav-link">
                                                 <i class="fas fa-laptop-code nav-icon"></i>
-                                                <p>Gestion de cursos</p>
+                                                <p>Gestión de cursos</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -261,7 +261,7 @@
                                         <li class="nav-item">
                                             <a href="idiomaIngles.bitlab" class="nav-link">
                                                 <i class="fas fa-language nav-icon"></i>
-                                                <p>Gestion de idioma</p>
+                                                <p>Gestión de idioma</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -269,7 +269,7 @@
                                         <li class="nav-item">
                                             <a href="sexo.bitlab" class="nav-link">
                                                 <i class="fas fa-transgender-alt nav-icon"></i>
-                                                <p>Gestion de generos</p>
+                                                <p>Gestión de géneros</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -277,7 +277,7 @@
                                         <li class="nav-item">
                                             <a href="nivelAcademico.bitlab" class="nav-link">
                                                 <i class="fas fa-school nav-icon"></i>
-                                                <p>Gestion de nivel academico</p>
+                                                <p>Gestión de nivel académico</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -285,7 +285,7 @@
                                         <li class="nav-item">
                                             <a href="ocupacion.bitlab" class="nav-link">
                                                 <i class="fas fa-briefcase nav-icon"></i>
-                                                <p>Gestion de ocupacion</p>
+                                                <p>Gestión de ocupación</p>
                                             </a>
                                         </li>
                                     </ui:insert>
@@ -295,7 +295,7 @@
                                 <h:form styleClass="nav-item">
                                     <h:commandLink styleClass="nav-link" actionListener="#{usuarioManaged.cerrarSesion()}" >
                                         <i class="fas fa-sign-out-alt nav-icon"></i>
-                                        <p>Cerrar Sesion</p>
+                                        <p>Cerrar Sesión</p>
                                     </h:commandLink>
                                 </h:form>
                                 <li class="nav-header"></li>
